# Spheralizer

./: .gitignore  CMakeLists.txt  Constants.h  Country.cpp  Country.h  Disease.cpp  Disease.h  README  Utils.h  drawAPI.cpp  drawAPI.h  main.cpp  utils.cpp  utils.h
cmake/: FindWiringPi.cmake
include/linux/spi/: spidev.h
include/wiringPi/: wiringPi.h
